@@ -36,6 +36,32 @@ does not start the service immediately. You can use
 to start the service and to give other commands to
 .BR supervise .
 
+If the file
+.IB s /notify
+exists and is executable,
+.B supervise
+executes it with a single command-line argument:
+.TP
+.B start
+The
+.B start
+script was executed.
+.TP
+.B run
+The
+.B run
+script was executed.
+.TP
+.B exit
+The running script exited with no errors.
+.TP
+.B error
+The running script exited with a non-zero exit code.
+.TP
+.B killed
+The running script was killed by a signal.
+.P
+
 .B supervise
 maintains status information in a binary format inside the directory
 .IR s\fB/supervise ,
